# Zoom_Clone

./: db.sqlite3.sql  pyproject.toml
base/: consumers.py  models.py  urls.py  views.py
base/migrations/: 0001_initial.py
base/templates/base/: home.html  home_clone.html  login.html  login_clone.html  register.html  room.html  room_clone.html  test.html
collected_static/css/: room.css
collected_static/js/: room.js
myproject/: asgi.py  settings.py  urls.py
static/css/: room.css
templates/: base.html
