[project]
name = "zoom-clone-gemini"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "channels[daphne,types]>=4.3.2",
    "channels-redis>=4.3.0",
    "daphne>=4.2.1",
    "django>=6.0.1",
    "python-dotenv>=1.2.1",
    "psycopg[binary]>=3.3.2",
]
